Fix overlap alignment and change card list styles

--- a/scss/components/cards/card-basic.scss
+++ b/scss/components/cards/card-basic.scss
@@ -390,6 +390,8 @@
 
     .list-group-flush .list-group-item{
         padding-left: 0;
+        background: none;
+        border-width: 1px 0 0 0;
     }
 
     // if card is an A
